# SrRenderer

./: CMakeLists.txt
src/: CMakeLists.txt  main.cu
src/GUI/: CMakeLists.txt  GUI.cpp  GUI.h
src/Intergrator/: CMakeLists.txt  Intergrator.cpp  Intergrator.h  LaunchParams.h  cudaBuffer.h  deviceHelper.h  optixHelper.h  test.cu
src/Intergrator/shader/: bdpt.ptx  test.cu
src/Model/: CMakeLists.txt  Model.cpp  Model.h
src/Opengl/: CMakeLists.txt  Window.cpp  Window.h
